   * Allow markup in a campaign description (bug #14435)
   * Escape no longer closes the new title screen
   * In recall dialog, use different color and brightness for XP and level
   * In unit list, display invisibility status and change order of columns
   * Update the mouse position after closing a dialog, so the dialog below
     'knows' the proper mouse location
 * WML engine:
   * Added 'side Y turn' and 'side Y turn X' events
   * Make status "hidden=yes" default, no need to do it manually in WML anymore
 * Miscellaneous and bugfixes:
   * Add-ons download list now takes filtering into account for
     displaying descriptions
   * Various code cleanups
   * Fixed a lot of issues found by cppcheck.
   * Fixed "Revert all changes" feature in the map editor (bug #14266)
   * Fixed broken illumination overlay in ToD sidebar image
   * gui2 dialogs are now shown in an exception safe way
   * Improve cmake po-update so it doesn't add too many dummy updates
   * po-update2-xx now properly updates all domains
   * Fixed sometimes incorrect update of unit/savegame view when using filter
   * Debug-created units now also have traits and name
   * Fixed broken ambush/invisibility at first turn or at unit creation
   * Fixed ambushing unit not directly visible when discovered
   * Fixed time tooltips (bug #13886)
   * Fixed halo render glitches (bug #14405)

Version 1.7.6:
 * AI:
   * Stabilized syntax of [modify_ai] tag
   * Reorganized AI macro library
   * Added 'move leader to target' candidate action
   * Added recall capabilities to default ai.
   * Added recall formula ai function and ai.recall_list formula ai attribute.
   * Modified default ai recruitment to recall good units from recall list.
   * Modified default ai recruitment to consider enemy potential recruits
     during recruitment.
   * Added the capability to control leader goal of allied leaders.
     Enabled this for certain LoW scenarios.
 * Animations