@@ -47,6 +47,20 @@ void tdialog::show(CVideo& video, const unsigned auto_close_time)
 
 	retval_ = window->show(restore_, auto_close_time);
 
+	/*
+	 * It can happen that when two clicks follow eachother fast that the event
+	 * handling code in events.cpp generates a DOUBLE_CLICK_EVENT. For some
+	 * reason it can happen that this event gets pushed in the queue when the
+	 * window is shown, but processed after the window is closed. This causes
+	 * the next window to get this pending event.
+	 *
+	 * This caused a bug where double clicking in the campaign selection dialog
+	 * directly selected a difficulty level and started the campaign. In order
+	 * to avoid that problem, filter all pending DOUBLE_CLICK_EVENT events after
+	 * the window is closed.
+	 */
+	events::discard(SDL_EVENTMASK(DOUBLE_CLICK_EVENT))
+
 	if(retval_ ==  twindow::OK) {
 		finalize_fields(*window);
 	}
